--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "178491d8",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "a16cf528",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "4                0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "8cb2a311",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "176e898c",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "5b6c6c8e",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "\n",
     "# 1. Has Agent\n",
     "df['has_agent'] = df['agent_name'].apply(lambda x: 0 if x == 'Unknown' else 1)\n",
@@ -427,6 +426,10 @@
     "df['contract_years_remaining'] = df['contract_years_remaining'].fillna(median_years)\n",
     "\n",
     "df['contract_years_remaining'] = df['contract_years_remaining'].astype(int)\n",
+    "# 4. Đội nằm trong nhóm nào\n",
+    "df['is_champion'] = (df['club_position'] == 1).astype(int)       \n",
+    "df['is_top_4'] = (df['club_position'] <= 4).astype(int)        \n",
+    "df['is_relegation'] = (df['club_position'] >= 18).astype(int)\n",
     "\n",
     "print(\"Đã tạo xong các Feature (Contract Years = Expiry Year - Last Season).\")\n",
     "print(df[['last_season', 'contract_expiration_date', 'contract_years_remaining']].head())"
@@ -442,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "d313edb1",
    "metadata": {},
    "outputs": [],
@@ -460,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "4f60bd3f",
    "metadata": {},
    "outputs": [
@@ -468,7 +471,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kích thước dữ liệu ban đầu: (21378, 17)\n"
+      "Kích thước dữ liệu ban đầu: (21378, 21)\n"
      ]
     },
     {
@@ -502,7 +505,11 @@
        "      <th>total_red_cards</th>\n",
        "      <th>has_agent</th>\n",
        "      <th>ga_per90min</th>\n",
-       "      <th>contract_years_remaining</th>\n",
+       "      <th>...</th>\n",
+       "      <th>last_season</th>\n",
+       "      <th>is_champion</th>\n",
+       "      <th>is_top_4</th>\n",
+       "      <th>is_relegation</th>\n",
        "      <th>sub_position</th>\n",
        "      <th>foot</th>\n",
        "      <th>current_club_name</th>\n",
@@ -524,7 +531,11 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.74</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Centre-Forward</td>\n",
        "      <td>right</td>\n",
        "      <td>Società Sportiva Lazio S.p.A.</td>\n",
@@ -544,7 +555,11 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>Goalkeeper</td>\n",
        "      <td>left</td>\n",
        "      <td>Borussia Dortmund</td>\n",
@@ -564,7 +579,11 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Goalkeeper</td>\n",
        "      <td>right</td>\n",
        "      <td>FC Bayern München</td>\n",
@@ -584,7 +603,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.53</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>Attacking Midfield</td>\n",
        "      <td>both</td>\n",
        "      <td>Arsenal Football Club</td>\n",
@@ -604,7 +627,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.41</td>\n",
-       "      <td>8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Centre-Forward</td>\n",
        "      <td>right</td>\n",
        "      <td>Málaga CF</td>\n",
@@ -614,6 +641,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -631,29 +659,38 @@
        "7              2                   679                   1                0   \n",
        "9              0                   221                   0                0   \n",
        "\n",
-       "   has_agent  ga_per90min  contract_years_remaining        sub_position  \\\n",
-       "0          1         0.74                         3      Centre-Forward   \n",
-       "1          1         0.00                         3          Goalkeeper   \n",
-       "4          1         0.00                         3          Goalkeeper   \n",
-       "7          0         0.53                         3  Attacking Midfield   \n",
-       "9          0         0.41                         8      Centre-Forward   \n",
+       "   has_agent  ga_per90min  ...  last_season  is_champion  is_top_4  \\\n",
+       "0          1         0.74  ...         2015            0         0   \n",
+       "1          1         0.00  ...         2017            0         1   \n",
+       "4          1         0.00  ...         2017            0         0   \n",
+       "7          0         0.53  ...         2015            0         1   \n",
+       "9          0         0.41  ...         2015            0         0   \n",
        "\n",
-       "    foot              current_club_name country_of_citizenship  \\\n",
-       "0  right  Società Sportiva Lazio S.p.A.                Germany   \n",
-       "1   left              Borussia Dortmund                Germany   \n",
-       "4  right              FC Bayern München                Germany   \n",
-       "7   both          Arsenal Football Club         Czech Republic   \n",
-       "9  right                      Málaga CF               Paraguay   \n",
+       "   is_relegation        sub_position   foot              current_club_name  \\\n",
+       "0              0      Centre-Forward  right  Società Sportiva Lazio S.p.A.   \n",
+       "1              0          Goalkeeper   left              Borussia Dortmund   \n",
+       "4              0          Goalkeeper  right              FC Bayern München   \n",
+       "7              0  Attacking Midfield   both          Arsenal Football Club   \n",
+       "9              0      Centre-Forward  right                      Málaga CF   \n",
        "\n",
-       "  current_club_domestic_competition_id  market_value_in_eur  \n",
-       "0                              serie-a         1,000,000.00  \n",
-       "1                           bundesliga           750,000.00  \n",
-       "4                           bundesliga           100,000.00  \n",
-       "7                       premier-league           350,000.00  \n",
-       "9                               laliga           250,000.00  "
+       "  country_of_citizenship current_club_domestic_competition_id  \\\n",
+       "0                Germany                              serie-a   \n",
+       "1                Germany                           bundesliga   \n",
+       "4                Germany                           bundesliga   \n",
+       "7         Czech Republic                       premier-league   \n",
+       "9               Paraguay                               laliga   \n",
+       "\n",
+       "  market_value_in_eur  \n",
+       "0        1,000,000.00  \n",
+       "1          750,000.00  \n",
+       "4          100,000.00  \n",
+       "7          350,000.00  \n",
+       "9          250,000.00  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +700,8 @@
     "    'age_at_last_season', 'height_in_cm', 'club_position',\n",
     "    'total_goals', 'total_assists', 'total_minutes_played',\n",
     "    'total_yellow_cards', 'total_red_cards', 'has_agent',\n",
-    "    'ga_per90min', 'contract_years_remaining'\n",
+    "    'ga_per90min', 'contract_years_remaining', 'last_season', \n",
+    "    'is_champion', 'is_top_4', 'is_relegation'\n",
     "]\n",
     "\n",
     "# Các cột phân loại ít giá trị (Low Cardinality) -> Sẽ dùng One-Hot/Label\n",
@@ -673,7 +711,7 @@
     "\n",
     "# Các cột phân loại nhiều giá trị (High Cardinality) -> Sẽ dùng Target Encoding\n",
     "categorical_features_high = [\n",
-    "    'current_club_name', 'country_of_citizenship',  'current_club_domestic_competition_id'\n",
+    "    'current_club_name', 'country_of_citizenship', 'current_club_domestic_competition_id'\n",
     "]\n",
     "\n",
     "target = 'market_value_in_eur'\n",
@@ -699,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "3a82960d",
    "metadata": {},
    "outputs": [
@@ -707,7 +745,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kích thước sau khi One-Hot Encoding: (21378, 29)\n"
+      "Kích thước sau khi One-Hot Encoding: (21378, 33)\n"
      ]
     },
     {
@@ -877,7 +915,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 29 columns</p>\n",
+       "<p>5 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -902,31 +940,38 @@
        "7          0         0.53  ...                    False   \n",
        "9          0         0.41  ...                    False   \n",
        "\n",
-       "  sub_position_Left Midfield sub_position_Left Winger sub_position_Left-Back  \\\n",
-       "0                      False                    False                  False   \n",
-       "1                      False                    False                  False   \n",
-       "4                      False                    False                  False   \n",
-       "7                      False                    False                  False   \n",
-       "9                      False                    False                  False   \n",
+       "   sub_position_Left Midfield  sub_position_Left Winger  \\\n",
+       "0                       False                     False   \n",
+       "1                       False                     False   \n",
+       "4                       False                     False   \n",
+       "7                       False                     False   \n",
+       "9                       False                     False   \n",
        "\n",
-       "   sub_position_Right Midfield  sub_position_Right Winger  \\\n",
-       "0                        False                      False   \n",
-       "1                        False                      False   \n",
-       "4                        False                      False   \n",
-       "7                        False                      False   \n",
-       "9                        False                      False   \n",
+       "   sub_position_Left-Back  sub_position_Right Midfield  \\\n",
+       "0                   False                        False   \n",
+       "1                   False                        False   \n",
+       "4                   False                        False   \n",
+       "7                   False                        False   \n",
+       "9                   False                        False   \n",
        "\n",
-       "   sub_position_Right-Back  sub_position_Second Striker  foot_left  foot_right  \n",
-       "0                    False                        False      False        True  \n",
-       "1                    False                        False       True       False  \n",
-       "4                    False                        False      False        True  \n",
-       "7                    False                        False      False       False  \n",
-       "9                    False                        False      False        True  \n",
+       "  sub_position_Right Winger sub_position_Right-Back  \\\n",
+       "0                     False                   False   \n",
+       "1                     False                   False   \n",
+       "4                     False                   False   \n",
+       "7                     False                   False   \n",
+       "9                     False                   False   \n",
        "\n",
-       "[5 rows x 29 columns]"
+       "  sub_position_Second Striker  foot_left  foot_right  \n",
+       "0                       False      False        True  \n",
+       "1                       False       True       False  \n",
+       "4                       False      False        True  \n",
+       "7                       False      False       False  \n",
+       "9                       False      False        True  \n",
+       "\n",
+       "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "8cae2c84",
    "metadata": {},
    "outputs": [
@@ -957,7 +1002,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train size: (17102, 28), Test size: (4276, 28)\n"
+      "Train size: (17102, 32), Test size: (4276, 32)\n"
      ]
     }
    ],
@@ -988,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "d672fe4f",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1121,7 @@
        "27589                                 12.78  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "fde5260d",
    "metadata": {},
    "outputs": [
