--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -519,8 +519,8 @@
     "##### 1. Tổng quan về Phân phối \n",
     "Dựa trên biểu đồ Histogram và các chỉ số thống kê mô tả, dữ liệu mục tiêu (`Market Value (Ln Scale)`) đã được xử lý rất tốt để đưa về dạng **phân phối gần chuẩn** (Approximate Normal Distribution).\n",
     "\n",
-    "*   **Tính đối xứng**: Quan sát cho thấy `Mean ($13.03)` và `Median ($13.00)` trên tập Train gần như trùng khớp.\n",
-    "    > Điều này chỉ ra rằng việc áp dụng phép biến đổi Logarithm tự nhiên (Ln) đã giải quyết hiệu quả vấn đề **\"Heavy Right Skew\"** (lệch phải nặng) thường thấy ở dữ liệu tài chính bóng đá, nơi giá trị của siêu sao gấp hàng nghìn lần cầu thủ trẻ.\n",
+    "*   **Tính đối xứng**: Quan sát cho thấy `Mean (13.03)` và `Median (13.00)` trên tập Train gần như trùng khớp.\n",
+    "    * Điều này chỉ ra rằng việc áp dụng phép biến đổi Logarithm tự nhiên (Ln) đã giải quyết hiệu quả vấn đề **\"Heavy Right Skew\"** (lệch phải nặng) thường thấy ở dữ liệu tài chính bóng đá, nơi giá trị của siêu sao gấp hàng nghìn lần cầu thủ trẻ.\n",
     "\n",
     "*   **Độ phân tán**: Độ lệch chuẩn (`Std`) là `2`, với `Range` trải dài từ `9` đến `19` trên thang Log.\n",
     "\n",
@@ -528,12 +528,12 @@
     "Đây là một tín hiệu **cực kỳ tích cực** cho quy trình huấn luyện mô hình (Model Training).\n",
     "\n",
     "*   **Bằng chứng (Evidence)**: Các chỉ số thống kê giữa Train và Test set giống hệt nhau:\n",
-    "    *   **Median**: `13` (cả hai)\n",
-    "    *   **Min/Max**: `9 / 19` (cả hai)\n",
-    "    *   **Std**: `2` (cả hai)\n",
+    "    *   **Median**: `13`\n",
+    "    *   **Min/Max**: `9 / 19`\n",
+    "    *   **Std**: `2`\n",
     "\n",
     "*   **Hàm ý (Implication)**: Việc chia dữ liệu (Data Splitting) đã được thực hiện xuất sắc, đảm bảo tính phân tầng (Stratification).\n",
-    "    > Chúng ta không gặp phải hiện tượng **\"Covariate Shift\"** trên biến mục tiêu. Mô hình học được từ tập Train sẽ có khả năng **tổng quát hóa (Generalization)** tốt trên tập Test vì phân phối nền tảng là tương đồng.\n",
+    "    * Chúng ta không gặp phải hiện tượng **\"Covariate Shift\"** trên biến mục tiêu. Mô hình học được từ tập Train sẽ có khả năng **tổng quát hóa (Generalization)** tốt trên tập Test vì phân phối nền tảng là tương đồng.\n",
     "\n",
     "##### 3. Ý nghĩa thực tiễn & Domain Insights\n",
     "Từ góc độ bóng đá, các con số trên thang Log này đại diện cho các phân khúc cầu thủ rõ rệt (ước tính qua hàm số mũ `e^x`):\n",
@@ -547,14 +547,14 @@
     "##### 4. Những điểm bất thường (Surprises)\n",
     "\n",
     "*   **Cấu trúc răng lược (Comb-like structure) ở vùng giá trị thấp**: Trên biểu đồ Histogram, tại các khoảng giá trị `10, 11, 12` có các cột dựng đứng xen kẽ với các khoảng trũng thấp hơn, thay vì một đường cong mượt mà.\n",
-    "    > **Giả thuyết**: Điều này gợi ý rằng dữ liệu gốc có thể bị **làm tròn (Rounding bias)**. Ví dụ: Các cầu thủ thường được định giá tròn số như 50k, 100k, 500k EUR. Khi chuyển sang log, các con số tròn này tụ lại thành các \"cột\" riêng biệt.\n",
+    "    * **Giả thuyết**: Điều này gợi ý rằng dữ liệu gốc có thể bị **làm tròn (Rounding bias)**. Ví dụ: Các cầu thủ thường được định giá tròn số như 50k, 100k, 500k EUR. Khi chuyển sang log, các con số tròn này tụ lại thành các \"cột\" riêng biệt.\n",
     "\n",
     "*   **Không có Outliers ở chiều dưới (Low-end)**: Boxplot không hiển thị outlier dưới râu dưới (khoảng giá trị 9). Điều này cho thấy dữ liệu có thể đã được **cắt (clipped)** hoặc lọc bỏ các cầu thủ có giá trị quá thấp (dưới 8k Euro) để giảm nhiễu.\n",
     "\n",
     "##### 5. Hạn chế (Limitations)\n",
     "\n",
     "*   **Mất mát ngữ nghĩa trực quan**: Việc sử dụng Ln Scale tuy tốt cho toán học của mô hình nhưng làm mất đi cảm nhận về độ lớn thực tế.\n",
-    "    > Sự chênh lệch giữa `18` và `19` (chỉ 1 đơn vị Log) thực tế là chênh lệch **hàng trăm triệu Euro**, lớn hơn rất nhiều so với chênh lệch giữa `10` và `11`.\n",
+    "    * Sự chênh lệch giữa `18` và `19` (chỉ 1 đơn vị Log) thực tế là chênh lệch **hàng trăm triệu Euro**, lớn hơn rất nhiều so với chênh lệch giữa `10` và `11`.\n",
     "\n",
     "*   **Outliers vẫn tồn tại**: Dù đã Log-transform, Boxplot vẫn báo hiệu một lượng lớn Outliers ở phía trên (`>16.5`). Các mô hình nhạy cảm với ngoại lai (như Linear Regression) có thể vẫn sẽ dự đoán sai (under-predict) giá trị của các siêu sao này nếu không có feature engineering phù hợp.\n",
     "\n",
@@ -562,7 +562,7 @@
     "\n",
     "Dữ liệu `Market Value` đã **sẵn sàng cho giai đoạn Modeling**. Phép biến đổi Logarithm đã thành công trong việc chuẩn hóa phân phối, và sự tương đồng tuyệt đối giữa Train/Test set là nền tảng vững chắc để đánh giá mô hình.\n",
     "\n",
-    "> **Lưu ý quan trọng cho Data Scientist**: Khi đánh giá sai số (Error metrics), tuyệt đối không chỉ dựa vào MSE/MAE trên thang Log. Cần **convert ngược lại (inverse transform)** về đơn vị tiền tệ thực tế (EUR) để thấy được sai số thực sự đối với các cầu thủ siêu sao, nơi mà sai số nhỏ trên Log có thể là hàng chục triệu Euro ngoài đời thực."
+    "*   **Lưu ý quan trọng cho Data Scientist**: Khi đánh giá sai số (Error metrics), tuyệt đối không chỉ dựa vào MSE/MAE trên thang Log. Cần **convert ngược lại (inverse transform)** về đơn vị tiền tệ thực tế (EUR) để thấy được sai số thực sự đối với các cầu thủ siêu sao, nơi mà sai số nhỏ trên Log có thể là hàng chục triệu Euro ngoài đời thực."
    ]
   },
   {
@@ -706,24 +706,24 @@
     "\n",
     "##### 2. Ý nghĩa thực tiễn & Hàm ý cho Mô hình (Implications)\n",
     "*   **Vấn đề về Feature \"Club Name\":** Với mức tương quan ~0.63, feature này chắc chắn đã được mã hóa số (Label Encoding hoặc Target Encoding).\n",
-    "    > **Implication:** Mô hình sẽ học được rằng \"CLB giàu = Cầu thủ đắt\". Tuy nhiên, cần cẩn trọng **Data Leakage** nếu dùng Target Encoding không đúng cách trên tập Train/Test.\n",
+    "    * **Implication:** Mô hình sẽ học được rằng \"CLB giàu = Cầu thủ đắt\". Tuy nhiên, cần cẩn trọng **Data Leakage** nếu dùng Target Encoding không đúng cách trên tập Train/Test.\n",
     "\n",
     "*   **Hiệu suất tấn công (Attacking Output):**\n",
     "    *   `total_assists` (~0.39) và `total_goals` (~0.37) có mức tương quan khá tương đồng và ở mức trung bình khá.\n",
-    "    > **Implication:** Đối với máy học, điều này gợi ý rằng một cầu thủ \"kiến thiết\" (playmaker) được định giá ngang ngửa hoặc nhỉnh hơn một chút so với người ghi bàn thuần túy trong tập dữ liệu này.\n",
+    "    * **Implication:** Đối với máy học, điều này gợi ý rằng một cầu thủ \"kiến thiết\" (playmaker) được định giá ngang ngửa hoặc nhỉnh hơn một chút so với người ghi bàn thuần túy trong tập dữ liệu này.\n",
     "\n",
     "*   **Độ tuổi (`age_at_last_season` ~ -0.12):** Tương quan âm nhẹ.\n",
-    "    > **Implication:** Thị trường bóng đá chuộng **\"tiềm năng\" (trẻ)** hơn \"kinh nghiệm\" (già). Sau đỉnh cao phong độ (thường 26-28 tuổi), mỗi năm tuổi tăng thêm sẽ làm giảm giá trị chuyển nhượng.\n",
+    "    * **Implication:** Thị trường bóng đá chuộng **\"tiềm năng\" (trẻ)** hơn \"kinh nghiệm\" (già). Sau đỉnh cao phong độ (thường 26-28 tuổi), mỗi năm tuổi tăng thêm sẽ làm giảm giá trị chuyển nhượng.\n",
     "\n",
     "##### 3. Những điểm bất thường (Surprises/Unexpected Findings)\n",
     "*   **Nghịch lý `contract_years_remaining` (~ -0.13):**\n",
-    "    > **Domain Knowledge:** Thông thường, cầu thủ còn càng nhiều năm hợp đồng thì giá chuyển nhượng càng cao (phí phá vỡ hợp đồng, phí giữ chân).\n",
-    "    > **Dữ liệu:** Biểu đồ lại cho thấy tương quan âm (Negative). Điều này rất lạ.\n",
-    "    > **Giả thuyết:** Có thể dữ liệu này bao gồm nhiều cầu thủ trẻ/dạng tiềm năng ký hợp đồng dài hạn nhưng giá trị hiện tại thấp, trong khi các siêu sao lớn tuổi thường ký gia hạn ngắn hạn (1-2 năm) nhưng giá trị vẫn rất cao. Hoặc feature này đang bị nhiễu.\n",
+    "    * **Domain Knowledge:** Thông thường, cầu thủ còn càng nhiều năm hợp đồng thì giá chuyển nhượng càng cao (phí phá vỡ hợp đồng, phí giữ chân).\n",
+    "    * **Dữ liệu:** Biểu đồ lại cho thấy tương quan âm (Negative). Điều này rất lạ.\n",
+    "    * **Giả thuyết:** Có thể dữ liệu này bao gồm nhiều cầu thủ trẻ/dạng tiềm năng ký hợp đồng dài hạn nhưng giá trị hiện tại thấp, trong khi các siêu sao lớn tuổi thường ký gia hạn ngắn hạn (1-2 năm) nhưng giá trị vẫn rất cao. Hoặc feature này đang bị nhiễu.\n",
     "\n",
     "*   **Thẻ phạt tăng giá trị? (`total_yellow_cards` ~ 0.28):**\n",
     "    *   Thẻ vàng có tương quan dương khá cao, thậm chí cao hơn cả `ga_per90min` (hiệu suất bàn thắng/thua).\n",
-    "    > **Lý giải:** Đây có thể là hiện tượng **Multicollinearity (Đa cộng tuyến)**. Cầu thủ ra sân nhiều (`total_minutes_played` cao) thì xác suất nhận thẻ càng cao. Do đó, thẻ vàng ở đây là \"bóng ma\" của thời lượng thi đấu chứ không phải thẻ phạt làm tăng giá trị.\n",
+    "    * **Lý giải:** Đây có thể là hiện tượng **Multicollinearity (Đa cộng tuyến)**. Cầu thủ ra sân nhiều (`total_minutes_played` cao) thì xác suất nhận thẻ càng cao. Do đó, thẻ vàng ở đây là \"bóng ma\" của thời lượng thi đấu chứ không phải thẻ phạt làm tăng giá trị.\n",
     "\n",
     "##### 4. Hạn chế của phân tích (Limitations)\n",
     "*   **Giới hạn của Tương quan Tuyến tính:** Biểu đồ này chỉ thể hiện mối quan hệ tuyến tính (Linear Relationship). Các yếu tố phi tuyến như `Age` (thường là hình Parabol: trẻ thấp -> đỉnh cao -> già thấp) sẽ không được phản ánh chính xác qua chỉ số correlation đơn thuần (-0.12 là quá đơn giản hóa).\n",
@@ -872,7 +872,7 @@
    "id": "135658af",
    "metadata": {},
    "source": [
-    "### C. Model Evaluation\n",
+    "### 4. Model Evaluation\n",
     "\n",
     "**Các metrics đánh giá:**\n",
     "1. **R² Score**: Tỷ lệ phương sai được giải thích bởi mô hình (0-1, càng cao càng tốt)\n",
@@ -981,7 +981,7 @@
    "id": "ccc6f3ab",
    "metadata": {},
    "source": [
-    "### D. Visualization - So sánh giá trị thực tế và dự đoán"
+    "### 5. Visualization - So sánh giá trị thực tế và dự đoán"
    ]
   },
   {
@@ -1161,7 +1161,7 @@
    "id": "0c6349fc",
    "metadata": {},
    "source": [
-    "### G. Feature Importance Analysis\n",
+    "### 6. Feature Importance Analysis\n",
     "\n",
     "Phân tích mức độ quan trọng của từng feature trong việc dự đoán giá trị cầu thủ."
    ]
@@ -1229,7 +1229,7 @@
    "id": "67575136",
    "metadata": {},
    "source": [
-    "### H. Error Distribution Analysis\n",
+    "### 7. Error Distribution Analysis\n",
     "\n",
     "Phân tích phân phối của các sai số để hiểu rõ hơn về hiệu suất mô hình."
    ]
@@ -1298,7 +1298,7 @@
    "id": "64f1357f",
    "metadata": {},
    "source": [
-    "### I. Sample Predictions\n",
+    "### 8. Sample Predictions\n",
     "\n",
     "Xem một số dự đoán cụ thể để hiểu rõ hơn về hiệu suất của mô hình."
    ]
@@ -1378,7 +1378,7 @@
    "id": "97501b74",
    "metadata": {},
    "source": [
-    "### J. Results & Interpretation\n",
+    "### 9. Results & Interpretation\n",
     "\n",
     "#### Kết quả chính:"
    ]
@@ -1476,7 +1476,7 @@
    "id": "4b0ef89e",
    "metadata": {},
    "source": [
-    "### K. Interpretation & Insights\n",
+    "### 10. Interpretation & Insights\n",
     "\n",
     "#### Trả lời câu hỏi: Có thể dự đoán Market Value hay không?\n",
     "\n",
@@ -1607,7 +1607,7 @@
    "id": "c7d7f353",
    "metadata": {},
    "source": [
-    "### Dùng mô hình dự đoán và so sánh kết quả đối với dữ liệu gốc "
+    "### 11. Dùng mô hình dự đoán và so sánh kết quả đối với dữ liệu gốc "
    ]
   },
   {
