--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "178491d8",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a16cf528",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "4                0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,12 +278,20 @@
    "metadata": {},
    "source": [
     "## Data cleaning\n",
-    "Dataset là màn hồ sơ, số liệu thống kê và giá trị của một cầu thủ tại mùa giải gần nhất. Nên loại bỏ các cầu thủ không thi đấu tại mùa giải gần nhất (số phút thi đấu = 0). Ngoài ra loại bỏ cả các cầu thủ không có giá trị chuyển nhượng và những giá trị phi lý (như chiều cao <100cm)"
+    "Đây là bước lọc bỏ \"rác\" và dữ liệu không hợp lệ.\n",
+    "1. Xử lý giá trị rỗng lạ: Thay thế các ký tự như \"?\", \"N/A\", \"Unknown\" về dạng chuẩn NaN của numpy để dễ xử lý.\n",
+    "2. Xóa dòng thiếu Target (market_value_in_eur):\n",
+    "Đây là bài toán Supervised Learning (Học có giám sát). Nếu không có nhãn (giá trị cầu thủ), máy tính không thể học được. Dữ liệu này vô dụng cho việc train. Vậy nên ta cần xóa những dòng thiếu target\n",
+    "3. Lọc cầu thủ không thi đấu (total_minutes_played > 0):\n",
+    "Một cầu thủ không ra sân phút nào thường không có đủ cơ sở dữ liệu để định giá chính xác, hoặc là dữ liệu lỗi/cầu thủ đã giải nghệ nên cũng cần lọc ra\n",
+    "3. Lọc chiều cao vô lý (<= 150cm): Loại bỏ nhiễu (outliers) do nhập liệu sai.\n",
+    "4. Xử lý hạn hợp đồng:\n",
+    "Trong bóng đá, cầu thủ hết hạn hợp đồng (tự do) thường có giá trị chuyển nhượng bằng 0 hoặc không theo quy luật thị trường thông thường. Vì thế nên ta cũng xóa các cầu thủ này"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8cb2a311",
    "metadata": {},
    "outputs": [
@@ -291,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dữ liệu sau khi làm sạch: (21378, 20)\n"
+      "Dữ liệu sau khi làm sạch: (21422, 20)\n"
      ]
     }
    ],
@@ -316,8 +324,6 @@
     "    (pd.isna(contract_year))\n",
     "]\n",
     "\n",
-    "# Xóa những cầu thủ thiếu thông tin vị trí, vì đây là thông tin cốt lõi không thể thay thế\n",
-    "df = df.dropna(subset=['position'])\n",
     "\n",
     "print(f\"Dữ liệu sau khi làm sạch: {df.shape}\")"
    ]
@@ -331,8 +337,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "691b1b44",
+   "metadata": {},
+   "source": [
+    "Mô hình Machine Learning (đặc biệt là Sklearn) không chấp nhận ô trống (NaN) nên chúng ta cần xử lý các giá trị thiếu\n",
+    "\n",
+    "* **Với biến số (Numerical):** Điền bằng Median (Trung vị).\n",
+    "\n",
+    "Dùng Median tốt hơn Mean (Trung bình) vì nó ít bị ảnh hưởng bởi các giá trị ngoại lai (outliers). Ví dụ: Lương cầu thủ ngôi sao cực cao sẽ kéo Mean lên, làm sai lệch việc điền dữ liệu cho cầu thủ thường.\n",
+    "\n",
+    "* **Với biến phân loại (Categorical):**\n",
+    "\n",
+    "foot: Điền bằng Mode (Giá trị xuất hiện nhiều nhất - thường là chân phải).\n",
+    "\n",
+    "position: Xóa những dòng trống position vì đây là yếu tố quan trọng cho mô hình dự đoán. Các cầu thủ trống position cũng trống luôn sub_position nên xóa luôn là hợp lý.\n",
+    "\n",
+    "sub_position: Điền có logic. Thay vì điền bừa, code nhóm theo position chính (Vd: Defender) và lấy vị trí phụ phổ biến nhất của nhóm đó (Vd: Centre-Back) để điền. Đây là cách xử lý thông minh để giữ tính nhất quán của dữ liệu.\n",
+    "\n",
+    "country_of_citizenship: Nếu thiếu quốc tịch, lấy nơi sinh (country_of_birth) đắp vào. Do hầu hết cầu thủ sẽ sinh ra và thi đấu cho cũng một đội tuyển quốc gia \n",
+    "\n",
+    "Các biến phân loại khác sẽ điền \"Unknown\" để tránh ảnh hưởng tới dữ liệu"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "176e898c",
    "metadata": {},
    "outputs": [
@@ -367,6 +397,9 @@
     "    axis=1\n",
     ")\n",
     "\n",
+    "# Xóa những cầu thủ thiếu thông tin vị trí, vì đây là thông tin cốt lõi không thể thay thế\n",
+    "df = df.dropna(subset=['position'])\n",
+    "\n",
     "df['country_of_citizenship'] = df['country_of_citizenship'].fillna(df['country_of_birth'])\n",
     "df['country_of_citizenship'] = df['country_of_citizenship'].fillna('Unknown')\n",
     "\n",
@@ -383,12 +416,33 @@
    "metadata": {},
    "source": [
     "### Feature engineering\n",
-    "Tạo ra những cột mới có ý nghĩa cho mô hình. Bao gồm có người đại diện không. Số bàn thắng + kiến tạo mỗi 90 phút. Nếu cầu thủ đó ra sân it hơn 90 phút, số G+A/90 sẽ được tính tính bằng đúng số bàn thắng và số kiến tạo của cầu thủ đó"
+    "**has_agent (Có người đại diện không):**\n",
+    "\n",
+    "- Cầu thủ có người đại diện (agent) thường được định giá cao hơn và thương lượng lương tốt hơn. \n",
+    "- Biến này được tạo bằng cách kiểm tra cột aggent_name. Nếu agent_name là \"Unknown\" sẽ được đánh dấu là không có agent và ngược lại\n",
+    "\n",
+    "**ga_per90min (Hiệu suất bàn thắng + kiến tạo mỗi 90p):**\n",
+    "\n",
+    "- So sánh tổng bàn thắng là không công bằng giữa một người đá 30 trận và người đá 5 trận. Quy về hiệu suất \"mỗi 90 phút\" giúp chuẩn hóa dữ liệu để so sánh năng lực thực sự.\n",
+    "- ga_per90min được tính bằng công thức \n",
+    "  * Với cầu thủ thi đấu trên 90 phút/mùa ('total_goals' + 'total_assists')/ 'total_minutes_played' * 90\n",
+    "  * Với cầu thủ thi đấu dưới 90 phút/mùa ga_per90 min được tính bằng đúng  'total_goals' + 'total_assists'\n",
+    "\n",
+    "**contract_years_remaining (Số năm hợp đồng còn lại):**\n",
+    "\n",
+    "* Trong bóng đá, hợp đồng càng dài thì giá trị chuyển nhượng càng cao (phí phá vỡ hợp đồng). Hợp đồng sắp hết hạn giá sẽ giảm sâu.\n",
+    "* contract_years_remaining được tính bằng năm và bằng contract_expiration_date' - 'last_season'\n",
+    "\n",
+    "**is_champion (Vô địch), is_top_4 (Trong top4), is_relegation (Xuống hạng):**\n",
+    "\n",
+    "* Vị thế của CLB ảnh hưởng lớn đến giá cầu thủ. Cầu thủ đội vô địch sẽ đắt giá hơn cầu thủ đội xuống hạng. Mặc dù đã có cột club_position nhưng nhìn vào khoảng cách giữa các số là như nhau. Ví dụ: khoảng cách giữa dội thứ 3 và 4 giống như giữa đội 4 và 5. Tuy nhiên đội 3 và 4 sẽ được thi đấu cúp châu lục còn đội thứ 5 thì không. Vậy nên cần thêm 1 biến mới\n",
+    "\n",
+    "* Đội có \"position\" = 1 sẽ được đánh dấu là champion. \"position\" <= 4 sẽ được đánh dấu \"is_top_4\" là True. Các đội xuống hạng có postion >= 18 sẽ đánh dấu \"is_relegation\" là True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5b6c6c8e",
    "metadata": {},
    "outputs": [
@@ -414,7 +468,7 @@
     "# 2. Goals + Assists per 90 min (Logic xử lý cầu thủ đá ít < 90p)\n",
     "df['ga_per90min'] = np.where(\n",
     "    df['total_minutes_played'] < 90,\n",
-    "    df['total_goals'] + df['total_assists'], # Lấy giá trị tuyệt đối nếu đá ít\n",
+    "    df['total_goals'] + df['total_assists'], \n",
     "    (df['total_goals'] + df['total_assists']) / df['total_minutes_played'] * 90\n",
     ")\n",
     "df['ga_per90min'] = df['ga_per90min'].round(2)\n",
@@ -458,7 +512,12 @@
    "id": "571bd4f4",
    "metadata": {},
    "source": [
-    "### Encoding"
+    "### Encoding\n",
+    "Vì model không thể hiểu được các biến phân loại nên ở đây ta cần phải mã hóa các biến phân loại để model có thể hiểu. Ở đây chia các biến phân loại thành 2 cách ecoding\n",
+    "\n",
+    "* Các cột phân loại ít giá trị: sub_position', 'foot' sử dụng one-hot encoding. Các biến này không có thứ tự tự nhiên. Chân trái không \"lớn hơn\" hay \"nhỏ hơn\" chân phải. Nếu ta gán số (0, 1, 2) như Label Encoding, mô hình có thể hiểu nhầm là có thứ tự (2 > 1). One-Hot tách chúng thành các cột riêng biệt (True/False) giúp mô hình đối xử công bằng với mọi giá trị. Ngoài ra, vì số lượng giá trị ít, việc tạo thêm vài chục cột mới không gây áp lực lớn lên bộ nhớ hay tốc độ tính toán.\n",
+    "\n",
+    "* Các cột phân loại nhiều giá trị: 'current_club_name', 'country_of_citizenship', 'current_club_domestic_competition_id' sử dụng target encoding. Các cột này nói về xuất thân của cầu thủ. Nó thường mang yếu tố thứ tự. Ví dụ một cầu thủ quốc tịch Anh sẽ thường được định giá cao hơn 1 cầu thủ Việt Nam. Phương pháp này giúp chuyển đổi từ biến định danh sang biến số có quan hệ trực tiếp với bài toán. Mô hình sẽ dễ dàng học được quy luật: Giá trị đại diện (Mean Target) càng cao -> Giá trị dự đoán càng cao."
    ]
   },
   {
